<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SDPSalaryCalcActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dollar_sign"
                tools:textAlignment="textEnd" />

            <EditText
                android:id="@+id/salary"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from" />

        <Spinner
            android:id="@+id/initialCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cities" />

        <TextView
            android:id="@+id/labelDestinationCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to" />

        <Spinner
            android:id="@+id/destinationCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cities" />

        <Button
            android:id="@+id/runButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/run" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equivalent_salary"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <EditText
            android:id="@+id/resultSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>